--- a/css/hero.css
+++ b/css/hero.css
@@ -1,4 +1,6 @@
 .hero {
+  max-width: 1440px;
+  margin: 0 auto;
   background-color: #2e2f42;
   background-image: url("../images/hero-bg.png");
   background-repeat: no-repeat;
@@ -7,8 +9,8 @@
   background-image:
     linear-gradient(
       180deg,
-      rgba(46, 47, 66, 0.8) 0%,
-      rgba(46, 47, 66, 0.8) 100%
+      rgba(46, 47, 66, 0.7) 0%,
+      rgba(46, 47, 66, 0.7) 100%
     ),
     url("../images/hero-bg.png");
 }
@@ -31,6 +33,8 @@
   letter-spacing: 0.04em;
   font-weight: 500;
   font-size: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-primary:hover {
