--- a/css/team.css
+++ b/css/team.css
@@ -37,11 +37,15 @@
   gap: 24px;
 }
 
-.team-list li {
+.team-item {
   border-radius: 0 0 4px 4px;
+  box-shadow:
+    0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.team-list li img {
+.team-image {
   display: block;
 }
 
@@ -63,6 +67,7 @@
   justify-content: center;
   align-items: center;
   gap: 24px;
+  margin-top: 8px;
 }
 
 .team-icon-link {
@@ -73,5 +78,19 @@
   height: 40px;
   width: 40px;
   border-radius: 40px;
-  margin-top: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-icon-link:hover,
+.team-icon-link:focus {
+  background-color: #404bbf;
+}
+
+.team-icon {
+  fill: #f4f4fd;
+}
+
+.team-icon-link:hover,
+.team-icon-link:focus {
+  background-color: #404bbf;
 }
